@@ -1,3 +1,7 @@
+2005-06-09  Jeremy Cribb <jcribb@email.unc.edu>
+	* cap_creep.m,cap_sweep.m,cap_viscometry,cap_yield.m: removed unnecessary commented code.  cleaned up a bit.
+	* cap_plot: added creep:all cone-and-plate plotting type.
+	
 2005-05-09  Jeremy Cribb <jcribb@email.unc.edu>
 	* Added cap_creep.m, cap_sweep.m, cap_viscometry.m, cap_yield.m.  These files take the exported XLS files from the Bohlin Gemini Rheometer and converts them to matlab structures/workspaces.
 	* Added cap_plot.m.  Plots standard rheology plots from data.  Uses above as input filters.
